# djangoql-iplweb

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  _build_meta.py  _translations.py  conftest.py  index.html  mkdocs.yml  package.json  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yaml  tests.yaml
admin/: index.html
completion-widget/: index.html  index.js
derived-fields/: index.html
djangoql/: admin.py  ast.py  breakdown.py  exceptions.py  extras.py  formatter.py  lexer.py  llm.py  parser.py  queryset.py  schema.py  serializers.py  syntax_help.py  views.py
djangoql/help/: syntax_help.de.md  syntax_help.en.md  syntax_help.es.md  syntax_help.fr.md  syntax_help.it.md  syntax_help.ja.md  syntax_help.nl.md  syntax_help.pl.md  syntax_help.pt_BR.md  syntax_help.ru.md  syntax_help.uk.md  syntax_help.zh_Hans.md
djangoql/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/fr/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/it/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/ja/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/nl/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/pl/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/pt_BR/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/ru/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/uk/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po  djangojs.po
djangoql/management/commands/: djangoql_describe_schema_for_llm.py
djangoql/static/djangoql/css/: highlight.css  syntax_help.css
djangoql/static/djangoql/js/: completion.js  completion.js.map  completion_admin.js  completion_admin_highlight.js  highlight.js  multiline.js
djangoql/templates/djangoql/: empty_breakdown.html  empty_breakdown_node.html  error_message.html  syntax_help.html
docs/: admin.md  completion-widget.md  derived-fields.md  empty-result-breakdown.md  example-project.md  i18n.md  index.md  installation.md  integrating-django-autocomplete-light.md  language.md  llm-schema.md  multiline-queries.md  pretty-print.md  query-breakdown.md  queryset.md  schema.md  syntax-highlighting.md
docs/superpowers/plans/: 2026-06-03-djangoql-derived-fields-code.md  2026-06-03-djangoql-docs-mkdocs.md  2026-06-04-object-reference-autocomplete.md  2026-07-04-llm-schema-enrichment.md  2026-07-05-llm-schema-compression.md  2026-07-05-llm-schema-derived-collapse.md  2026-07-05-per-model-field-filtering.md
docs/superpowers/specs/: 2026-06-03-autocomplete-value-fields-design.md  2026-06-03-derived-fields-dot-syntax-design.md  2026-06-03-djangoql-derived-fields-design.md  2026-06-03-empty-result-breakdown-design.md  2026-06-04-autocomplete-lookup-name-rel-idiom-design.md  2026-06-04-did-you-mean-fields-design.md  2026-06-04-object-reference-autocomplete-design.md  2026-06-04-query-ux-design.md  2026-06-05-markdown-syntax-help-design.md  2026-06-05-translatable-autocomplete-labels-design.md  2026-07-04-llm-schema-enrichment-design.md  2026-07-05-llm-schema-compression-design.md  2026-07-05-llm-schema-derived-collapse-design.md  2026-07-05-per-model-field-filtering-design.md  2026-07-11-llm-schema-dictionary-dedup-handoff.md
empty-result-breakdown/: index.html
example-project/: index.html
example_project/: README.md  manage.py  requirements.txt
example_project/example_project/: settings.py  urls.py
i18n/: index.html
installation/: index.html
integrating-django-autocomplete-light/: index.html
language/: index.html
llm-schema/: index.html
multiline-queries/: index.html
pretty-print/: index.html
query-breakdown/: index.html
queryset/: index.html
schema/: index.html
search/: search_index.json
syntax-highlighting/: index.html
test_project/core/: admin.py  models.py  views.py
test_project/core/migrations/: 0005_book_published_date_book_published_time_and_more.py  0006_alter_book_name.py
test_project/core/tests/: test_admin.py  test_ast.py  test_autocomplete.py  test_breakdown.py  test_build_translations.py  test_extras.py  test_formatter.py  test_i18n.py  test_lexer.py  test_llm.py  test_parser.py  test_queryset.py  test_schema.py  test_syntax_help.py  test_views.py
test_project/test_project/: urls.py
